refactor: Refactor repositories to use JPA and update models
Migrated DriverLocation, InconsistencyReport, and Rating repositories to Spring Data JPA, updating entity annotations and relationships. Refactored related services and DTOs to support new entity structure and repository methods. Improved security and authorization checks for inconsistency reports, and enhanced ride history queries for drivers. Removed legacy cache and in-memory storage logic.